fixed checkout and cart items alignment

--- a/react-app/src/components/CheckOutPage/checkout.css
+++ b/react-app/src/components/CheckOutPage/checkout.css
@@ -16,7 +16,7 @@
     flex-direction: row;
     justify-content: flex-start;
     margin-left: 200px;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
     font-size: 1.2em;
     font-weight: 300;
     color: rgb(97, 137, 97);
@@ -57,8 +57,13 @@
 .order-item {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    margin-left: 100px;
+}
+
+.checkout-item-name-qty {
+    margin-left: 100px;
 }
 
 .checkout-item-img {
