--- a/react-app/src/components/ShoppingBagPage/shoppingbag.css
+++ b/react-app/src/components/ShoppingBagPage/shoppingbag.css
@@ -28,7 +28,7 @@
 .bag-items-list {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: fit-content;
     width: 900px;
